--- a/lib/index.html
+++ b/lib/index.html
@@ -2,7 +2,7 @@
 <html ng-app="rock-paper-scissors" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>rock-paper-scissors</title>
+  <title>Rock Paper Scissors</title>
   <base href="/">
 </head>
 <body>
