making dom show who the winner is, working version of the game but not the prettiest

--- a/client/app/features/rockPaperScissors/rockPaperScissors.tpl.html
+++ b/client/app/features/rockPaperScissors/rockPaperScissors.tpl.html
@@ -17,4 +17,10 @@
         </button>
     </div>
 
+    <!-- should this logic be somewhere else? -->
+    <p ng-show="rockPaperScissors.winner === 'player'" class="winner">You win!</p>
+    <p ng-show="rockPaperScissors.winner === 'computer'" class="winner">Computer wins! </p>
+    <p ng-show="rockPaperScissors.winner === 'draw'" class="winner">It's a draw</p>
+
+
 </div>
