adding some animation to the game, adding a counter

--- a/client/app/features/rockPaperScissors/rockPaperScissors.tpl.html
+++ b/client/app/features/rockPaperScissors/rockPaperScissors.tpl.html
@@ -26,4 +26,5 @@
     <p ng-show="rockPaperScissors.winner === 'draw'" class="winner">It's a draw</p>
 
 
+    <p ng-show="rockPaperScissors.scoreCard.player || rockPaperScissors.scoreCard.computer || rockPaperScissors.scoreCard.draw" class="score">Player {{rockPaperScissors.scoreCard.player}} : Computer {{rockPaperScissors.scoreCard.computer}} : Draws {{rockPaperScissors.scoreCard.draw}} </p>
 </div>
